# dxf-example

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
data/: Design Pit.dxf
include/: DXFReader.h  MeshData.h  MeshSummarizer.h  SummaryWriter.h
scripts/: build_unix.sh  build_windows.bat
src/: DXFReader.cpp  MeshSummarizer.cpp  SummaryWriter.cpp  main.cpp
tests/: CMakeLists.txt  test_dxf_reader.cpp  test_integration.cpp  test_main.cpp  test_mesh_data.cpp  test_mesh_summarizer.cpp  test_summary_writer.cpp
tests/test_data/: empty.dxf  malformed.dxf  single_triangle.dxf  two_triangles.dxf
